map potentiometer to channel 9 in simulator model

--- a/MODELS/model00.yml
+++ b/MODELS/model00.yml
@@ -153,6 +153,21 @@ mixData:
    speedUp: 0
    speedDown: 0
    name: ""
+ -
+   weight: 100
+   destCh: 9
+   srcRaw: P1
+   carryTrim: 0
+   mixWarn: 0
+   mltpx: ADD
+   offset: 0
+   swtch: "NONE"
+   flightModes: 000000000
+   delayUp: 0
+   delayDown: 0
+   speedUp: 0
+   speedDown: 0
+   name: ""
 expoData: 
  -
    mode: 3
